Updated new forms

--- a/html/Cadastrar_paciente.html
+++ b/html/Cadastrar_paciente.html
@@ -9,33 +9,33 @@
 </head>
 <body class="vh">
     <main class="witha m-auto background-gradiente">
-        <form action="../php/inserir.php" method="post"> 
+        <form action="../php/inserir_paciente.php" method="post"> 
             <div class="teste-2">
                 <div class="teste-1">
-                        <h1 class="h3 mb-3 fw-normal">Agendar Consulta</h1>
+                        <h1 class="h3 mb-3 fw-normal">Cadastro de Paciente</h1>
                     
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="floatingInput" placeholder="nome@example.com" name="">
+                            <input type="text" class="form-control" id="floatingInput" placeholder="nome completo" name="Nome_paciente">
                             <label for="floatingInput">Nome Completo</label>
                         </div>
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="floatingPassword" placeholder="000.000.000-00" name="">
+                            <input type="text" class="form-control" id="floatingPassword" placeholder="000.000.000-00" name="Cpf_paciente">
                             <label for="floatingPassword">Cpf</label>
                         </div>
                         <div class="form-floating">
-                            <input type="tel" class="form-control" id="floatingPassword" placeholder="00000-0000" name="">
+                            <input type="tel" class="form-control" id="floatingPassword" placeholder="00000-0000" name="Tel_paciente">
                             <label for="floatingPassword">Telefone</label>
                         </div>
                         <div class="form-floating">
-                            <input type="email" class="form-control" id="floatingPassword" placeholder="nome@example.com" name="">
+                            <input type="email" class="form-control" id="floatingPassword" placeholder="nome@example.com" name="Email">
                             <label for="floatingPassword">Email</label>
                         </div>
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="floatingPassword" placeholder="00.000-000" name="">
+                            <input type="text" class="form-control" id="floatingPassword" placeholder="00.000-000" name="Cep">
                             <label for="floatingPassword">Cep</label>
                         </div>
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="floatingPassword" placeholder="Rua, Avenida, Bairro, Estado" name="">
+                            <input type="text" class="form-control" id="floatingPassword" placeholder="Rua, Avenida, Bairro, Estado" name="Endereco">
                             <label for="floatingPassword">Endereço</label>
                         </div>
                     
