--- a/html/menu.html
+++ b/html/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" data-bs-theme="dark">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,8 +30,9 @@
             <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Phasellus eget porttitor tortor, quis luctus ligula. Vestibulum nec ultricies erat. Ut euismod sed metus quis semper. Donec at viverra magna. Quisque in sagittis felis. Maecenas finibus erat et magna pulvinar tincidunt. Aliquam pharetra orci interdum, tristique arcu sed, posuere nulla. Nam nec sem pellentesque, varius nibh nec, consectetur odio. Nunc laoreet ut est ut consequat..</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-                <button type="button" class="btn btn-outline-light btn-lg px-4"><a class="tirar" href="./Cadastrar_paciente.html">Agendar Consulta</a></button>
-                <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="./excluir_agendamento.html">Exluir agendamento</a></button>
+                <button type="button" class="btn btn-outline-light btn-lg px-4"><a class="tirar" href="./Cadastrar_paciente.html">Cadastrar Paciente</a></button>
+                <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="./agendar_consulta.html">Agendar Consulta</a></button>
+                <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="./excluir_agendamento.html">Excluir Consulta</a></button>
             </div>
             </div>
             <div class="overflow-hidden" style="max-height: 30vh;">
