Adicionado excluir agenda

--- a/html/agendar_consulta.html
+++ b/html/agendar_consulta.html
@@ -16,7 +16,7 @@
                         <h1 class="h3 mb-3 fw-normal">Agendar Consulta</h1>
                     
                         <div class="form-floating">
-                            <input type="date" class="form-control" id="floatingInput" placeholder="00/00/00" name="Data_Consulta">
+                            <input type="date" class="form-control" id="floatingInput"  name="Data_Consulta">
                             <label for="floatingInput">Data_Consulta</label>
                         </div>
                         <div class="form-floating">
