--- a/html/excluir_agendamento.html
+++ b/html/excluir_agendamento.html
@@ -9,17 +9,17 @@
 </head>
 <body class="vh">
     <main class="witha m-auto background-gradiente">
-        <form>
+        <form action="../php/excluir.agend.php">
             <div class="aumentar-2">
                 <div class="aumentar">
                         <h1 class="h3 mb-3 fw-normal">Excluir Consulta</h1>
                     
                         <div class="form-floating">
-                            <input type="date" class="form-control" id="floatingInput" placeholder="00/00/00">
+                            <input type="date" class="form-control" id="floatingInput" placeholder="00/00/00" name="Data_consulta">
                             <label for="floatingInput">Data_Consulta</label>
                         </div>
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="floatingPassword" placeholder="Password">
+                            <input type="text" class="form-control" id="floatingPassword" placeholder="Password" name="Motivo_consulta">
                             <label for="floatingPassword">Motivo</label>
                         </div>
                     
