--- a/html/excluir_agendamento.html
+++ b/html/excluir_agendamento.html
@@ -9,7 +9,7 @@
 </head>
 <body class="vh">
     <main class="witha m-auto background-gradiente">
-        <form action="../php/excluir.agend.php">
+        <form action="../php/excluir.agend.php" method="post">
             <div class="aumentar-2">
                 <div class="aumentar">
                         <h1 class="h3 mb-3 fw-normal">Excluir Consulta</h1>
