--- a/html/menu.html
+++ b/html/menu.html
@@ -33,6 +33,7 @@
                 <button type="button" class="btn btn-outline-light btn-lg px-4"><a class="tirar" href="./Cadastrar_paciente.html">Cadastrar Paciente</a></button>
                 <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="./agendar_consulta.html">Agendar Consulta</a></button>
                 <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="./excluir_agendamento.html">Excluir Consulta</a></button>
+                <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="../php/mostrar.php">Mostrar Consulta</a></button>
             </div>
             </div>
             <div class="overflow-hidden" style="max-height: 30vh;">
