--- a/html/menu.html
+++ b/html/menu.html
@@ -30,14 +30,15 @@
             <div class="col-lg-6 mx-auto">
             <p class="lead my-5">Phasellus eget porttitor tortor, quis luctus ligula. Vestibulum nec ultricies erat. Ut euismod sed metus quis semper. Donec at viverra magna. Quisque in sagittis felis. Maecenas finibus erat et magna pulvinar tincidunt. Aliquam pharetra orci interdum, tristique arcu sed, posuere nulla. Nam nec sem pellentesque, varius nibh nec, consectetur odio. Nunc laoreet ut est ut consequat..</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-                <button type="button" class="btn btn-outline-light btn-lg px-4"><a class="tirar" href="./Cadastrar_paciente.html">Cadastrar Paciente</a></button>
+                <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="./Cadastrar_paciente.html">Cadastrar Paciente</a></button>
                 <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="./agendar_consulta.html">Agendar Consulta</a></button>
                 <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="./excluir_agendamento.html">Excluir Consulta</a></button>
                 <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="../php/mostrar.php">Mostrar Consulta</a></button>
+                <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="../php/alterar_consultar.php">Mostrar Consulta</a></button>
             </div>
             </div>
             
-            <div class="overflow-hidden desaparecer mt-5" style="max-height: 35.5vh;">
+            <div class="overflow-hidden desaparecer mt-5">
             <div class="container px-5 pt-5 no">
                 <img src="../assets/healthcare-workers-7408560_1280.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" height="800px" loading="lazy">
             </div>
