--- a/html/menu.html
+++ b/html/menu.html
@@ -34,7 +34,7 @@
                 <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="./agendar_consulta.html">Agendar Consulta</a></button>
                 <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="./excluir_agendamento.html">Excluir Consulta</a></button>
                 <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="../php/mostrar.php">Mostrar Consulta</a></button>
-                <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="../php/alterar_consultar.php">Atualizar Atendente</a></button>
+                <button type="button" class="btn btn-outline-light btn-lg px-4 right"><a class="tirar" href="../php/alterar_consultar.php">Atualizar Paciente</a></button>
             </div>
             </div>
             
